Fix drag-and-drop, variant removal logic, and remove icon visibility

--- a/src/css/productItem.css
+++ b/src/css/productItem.css
@@ -39,7 +39,7 @@ left: -15px;
   width: 69px;
 }
 .variantDis{
-  width: 89px;
+  width: 92px;
   padding-right: 20px;
 }
 /* Product Header */
